samples/_failures_safe/1761245655_9db234_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f63d16c6.c: In function ‘main’:
./samples/SAFE/__tmp_f63d16c6.c:195:24: error: missing terminating " character
  195 |                 printf("Processed
      |                        ^~~~~~~~~~
./samples/SAFE/__tmp_f63d16c6.c:195:17: error: expected expression at end of input
  195 |                 printf("Processed
      |                 ^~~~~~
./samples/SAFE/__tmp_f63d16c6.c:195:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f63d16c6.c:195:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f63d16c6.c:195:17: error: expected declaration or statement at end of input
